[PAXEXAM-916]remove java module related jvm options from karaf test container
(cherry picked from commit 2d406793decdcdb43434ffaac34f8f6ce031866d)