@@ -46,30 +46,14 @@ public class KarafJavaRunner implements Runner {
                         commandLine = new CommandLineBuilder()
                             .append(getJavaExecutable(javaHome))
                             .append(javaOpts)
-                            .append("--add-opens")
-                            .append("java.base/java.security=ALL-UNNAMED")
-                            .append("--add-opens")
-                            .append("java.base/java.net=ALL-UNNAMED")
-                            .append("--add-opens")
-                            .append("java.base/java.lang=ALL-UNNAMED")
-                            .append("--add-opens")
-                            .append("java.base/java.util=ALL-UNNAMED")
-                            .append("--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED")
-                            .append("--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED")
-                            .append("--add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED")
-                            .append("--add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED")
-                            .append("--add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED")
-                            .append("--add-exports=java.xml.ws/com.sun.xml.internal.messaging.saaj.soap.impl=ALL-UNNAMED")
-                            .append("--add-modules")
-                            .append("java.xml.ws.annotation,java.corba,java.transaction,java.xml.bind,java.xml.ws,jdk.xml.bind")
                             .append("-Dkaraf.instances=" + karafHome + "/instances")
                             .append("-Dkaraf.home=" + karafHome)
                             .append("-Dkaraf.base=" + karafBase)
                             .append("-Dkaraf.data=" + karafData)
                             .append("-Dkaraf.etc=" + karafEtc)
                             .append("-Djava.util.logging.config.file=" + karafEtc + "/java.util.logging.properties");
-                    }
-                    else {
+                        
+                    } else {
                         commandLine = new CommandLineBuilder()
                             .append(getJavaExecutable(javaHome))
                             .append(javaOpts)
